--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-           persist-credentials: true
+          token: ${{ secrets.PAT_TOKEN }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
