--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "vue": "latest",
     "vue-chartjs": "^5.3.1",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
